docs: Fix extra margin between link cards
I can't reproduce this issue to make a bug report, so this is a work around

--- a/docs/src/styles/main.css
+++ b/docs/src/styles/main.css
@@ -3,6 +3,10 @@
 	padding-bottom: 0;
 }
 
+.sl-link-card:has(> .sl-flex.stack > .no-stack) {
+	margin-top: 0;
+}
+
 .sl-link-card > .sl-flex.stack:has(> .no-stack) {
 	flex-direction: row;
 }
